infra/istio/ingress-task-service.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: content-moderation-gateway
  namespace: content-moderation
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: task-service-ingress
  namespace: content-moderation
spec:
  hosts:
    - "*"
  gateways:
    - content-moderation-gateway
  http:
    - match:
        - uri:
            prefix: /tasks
      route:
        - destination:
            host: task-service.content-moderation.svc.cluster.local
            port:
              number: 8001
